--- a/src/app/itt/subject-activities/subject-activities.component.html
+++ b/src/app/itt/subject-activities/subject-activities.component.html
@@ -1,24 +1,24 @@
 <div fxLayout="row" fxLayoutWrap="wrap" fxLayoutAlign="space-between" fxFlex="100">
-  <md-card  fxFlex.gt-md="20" fxFlex.gt-sm="20" fxFlex.gt-xs="100" fxFlex="100">
+  <md-card  fxFlex.gt-md="30" fxFlex.gt-sm="30" fxFlex.gt-xs="100" fxFlex="100">
     <md-input-container fxFlex="100">
-      <input name="location"
+      <input name="subject"
              mdInput
              fxFlex="100"
-             placeholder="Locatia"
+             placeholder="Subject"
              [mdAutocomplete]="auto"
-             [(ngModel)]="selectedLocation"
-             [formControl]="locationControl">
+             [(ngModel)]="selectedSubject"
+             [formControl]="subjectControl">
     </md-input-container>
 
-    <md-autocomplete #auto="mdAutocomplete" [displayWith]="locationDisplayMethod">
-      <md-option *ngFor="let location of filteredLocations | async" [value]="location">
-        {{ location?.fullName }}
+    <md-autocomplete #auto="mdAutocomplete" [displayWith]="subjectDisplayMethod">
+      <md-option *ngFor="let subject of filteredSubject | async" [value]="subject">
+        {{ subject?.fullName }}
       </md-option>
     </md-autocomplete>
   </md-card>
 
 
-  <md-card *ngIf="isLocationSelected" class="mat-pad-none" fxFlex.gt-md="70" fxFlex.gt-sm="70" fxFlex.gt-xs="100" fxFlex="100">
+  <md-card *ngIf="isSubjectSelected" class="mat-pad-none" fxFlex.gt-md="60" fxFlex.gt-sm="60" fxFlex.gt-xs="100" fxFlex="100">
 
     <ng-template #loading>
       <div class="text-center">
